Fixed a little spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -205,6 +205,11 @@ b {
     margin: 1.5rem auto;    
 }
 
+.form-section:last-of-type {
+    
+    margin-bottom: 0;
+}
+
 a {
 
     color: #fffdfb;
